# SystemMonitor

./: .env  Cargo.toml  Dokumentacia.md  README.md  build.sh  dokumentacia.txt
.cargo/: config.toml
docs/diagrams/: 01-usecase.puml  02-class.puml  03-sequence-tui.puml  04-sequence-api.puml  05-component.puml  06-activity.puml  07-deployment.puml  08-package.puml  09-dependencies.puml
src/: main.rs
src/api/: handlers.rs  mod.rs  routes.rs  state.rs
src/cli/: app.rs  mod.rs  runner.rs  ui.rs
src/cli/app/: app_state.rs  app_system_info.rs
src/cli/ui/: ui_help.rs  ui_network.rs  ui_overview.rs  ui_process.rs  ui_widgets.rs
src/config/: cli.rs  helpers.rs  mod.rs
src/db/: connection.rs  mod.rs  queries.rs
src/models/: metrics.rs  mod.rs  temperatures.rs
src/modes/: api.rs  menu.rs  mod.rs  tui.rs
src/services/: api_monitor.rs  mod.rs  monitor.rs  temperatures.rs
